<resources>
    <string name="app_name">fitnhealthy</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="click_to_sign_in">Already have an account? Log in</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logout">Logout</string>
    <string name="home"><u>Home</u></string>
    <string name="workout">Workout</string>
    <string name="hello_user">Hello User</string>
    <string name="your_stats">Your stats</string>
    <string name="count_your_steps">Count your steps</string>
    <string name="test_your_knowledge">Test your knowledge</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="return_to_login">Return to Login</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="reset_password">Reset password</string>
    <string name="update_user_profile_data">Update your profile data</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="save_new_profile_data">Save new profile data</string>
    <string-array name="experience_values">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string-array name="frequency_values">
        <item>0-1 times per week(low)</item>
        <item>1-3 times per week(moderate)</item>
        <item>2-5 times per week(recommended)</item>
        <item>5+ times per week(highly active)</item>
    </string-array>
    <string-array name="difficulty_values">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Greek</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="targets">
        <item>Weight loss</item>
        <item>Flat body</item>
        <item>Build muscle</item>
    </string-array>
    <string-array name="gender">
        <item>Select your gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="stats">
        <item>Last month</item>
        <item>Last 2 weeks</item>
        <item>Last 4 weeks</item>
        <item>Last 2 months</item>
        <item>Last 4 months</item>
        <item>Last 6 months</item>
        <item>Last year</item>
        <item>All time</item>
    </string-array>
    <!-- For data layer example -->
    <string name="start_wearable_activity">Start Wearable Activity</string>
    <string name="take_photo">Take a Photo</string>
    <string name="send_photo">Send Photo</string>
    <string name="photo_placeholder">Photo placeholder</string>
    <string name="captured_photo">Captured photo</string>
    <string name="data_item_changed">DataItem changed</string>
    <string name="data_item_deleted">DataItem deleted</string>
    <string name="data_item_unknown">Unknown DataItem type</string>
    <string name="message_from_watch">Message from watch</string>
    <string name="capability_changed">Capability changed</string>


</resources>