<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:gravity="center"
    android:orientation="vertical"

    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_img_auth"
        android:importantForAccessibility="no" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_auth"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="71dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/resetPwdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                android:layout_marginTop="144dp"


                android:fontFamily="@font/aldrich"

                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="#D8FFFFFF"
                android:textSize="25sp"
                android:textStyle="normal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"

                android:layout_width="310dp"
                android:layout_height="50dp"

                android:layout_alignParentBottom="true"

                android:layout_marginLeft="12dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="12dp"


                android:background="@drawable/input_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"

                android:fontFamily="@font/aldrich"
                android:hint="@string/email"

                android:paddingStart="20dp"


                android:gravity="center_vertical"
                android:textColorHint="#AEFFFFFF"
                android:textSize="16sp"
                android:textColor="#AEFFFFFF"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetPwdTextView"

                tools:ignore="VisualLintTextFieldSize" />



            <TextView
                android:id="@+id/returnToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/return_to_login"
                android:textColor="#D8FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/emailInput"
                app:layout_constraintTop_toBottomOf="@+id/emailInput"

                />

            <Button
                android:id="@+id/resetPwdBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="64dp"
                android:background="@drawable/btn_auth"
                android:fontFamily="@font/aldrich"
                android:text="@string/send_reset_link"
                android:textColor="#D8FFFFFF"

                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/returnToLogin"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/emailInput"
                app:layout_constraintTop_toBottomOf="@+id/returnToLogin"
                tools:ignore="DuplicateSpeakableTextCheck" />






        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>